--- a/src/_layouts/base.njk
+++ b/src/_layouts/base.njk
@@ -12,14 +12,14 @@
   </head>
   <body class="sans-serif dark-gray bg-washed-green{% if fullHeight %} {{ fullHeight }}{% endif %}">
     <div class="{% if contentPadding %}{{ contentPadding }}{% else %}pa3 pa4-m pa6-l pb4-l{% endif %}">
-      <header class="f7">
-        <nav class="f6">
-          <a class="link dim dark-green dib mr3 mb3" href="/" title="home">
+      <header class="text-lg">
+        <nav class="text-xl">
+          <a class="link dim dark-green inline-block mr3 mb3" href="/" title="home">
             <i class="v-mid" data-feather="home"></i>
             <span class="v-mid">home</span>
           </a>
           <a
-            class="link dim dark-green dib mr3 mb3"
+            class="link dim dark-green inline-block mr3 mb3"
             href="/now"
             title="what I'm doing now"
           >
@@ -27,7 +27,7 @@
             <span class="v-mid">now</span>
           </a>
           <a
-            class="link dim dark-green dib mr3 mb3"
+            class="link dim dark-green inline-block mr3 mb3"
             href="/projects"
             title="projects"
           >
@@ -35,7 +35,7 @@
             <span class="v-mid">projects</span>
           </a>
           <a
-            class="link dim dark-green dib mr3 mb3"
+            class="link dim dark-green inline-block mr3 mb3"
             href="/about"
             title="about"
           >
@@ -49,9 +49,9 @@
         {{ content | safe }}
         {% endblock %}
       </main>
-      <footer class="pt5 f7">
+      <footer class="pt5 text-lg">
         <a
-          class="link dim dark-green dib mr3 mb3"
+          class="link dim dark-green inline-block mr3 mb3"
           target="_blank"
           href="https://www.linkedin.com/in/philovk/"
           title="linkedin"
@@ -60,7 +60,7 @@
           <span class="v-mid">linkedin</span>
         </a>
         <a
-          class="link dim dark-green dib mr3 mb3"
+          class="link dim dark-green inline-block mr3 mb3"
           target="_blank"
           href="https://slides.com/phivk/"
           title="slides"
@@ -69,7 +69,7 @@
           <span class="v-mid">slides</span>
         </a>
         <a
-          class="link dim dark-green dib mr3 mb3"
+          class="link dim dark-green inline-block mr3 mb3"
           target="_blank"
           href="https://twitter.com/phivk"
           title="twitter"
@@ -78,7 +78,7 @@
           <span class="v-mid">twitter</span>
         </a>
         <a
-          class="link dim dark-green dib mr3 mb3"
+          class="link dim dark-green inline-block mr3 mb3"
           target="_blank"
           href="https://c.im/@Phivk"
           title="mastodon"
@@ -88,7 +88,7 @@
           <span class="v-mid">mastodon</span>
         </a>
         <a
-          class="link dim dark-green dib mr3 mb3"
+          class="link dim dark-green inline-block mr3 mb3"
           target="_blank"
           href="https://github.com/phivk/"
           title="github"
@@ -97,7 +97,7 @@
           <span class="v-mid">github</span>
         </a>
         <a
-          class="link dim dark-green dib mr3 mb3"
+          class="link dim dark-green inline-block mr3 mb3"
           target="_blank"
           href="https://medium.com/@phivk"
           title="medium"
@@ -106,7 +106,7 @@
           <span class="v-mid">medium</span>
         </a>
         <a
-          class="link dim dark-green dib mr3 mb3"
+          class="link dim dark-green inline-block mr3 mb3"
           target="_blank"
           href="http://are.na/philo-van-kemenade/"
           title="are.na"
@@ -115,7 +115,7 @@
           <span class="v-mid">are.na</span>
         </a>
         <a
-          class="link dim dark-green dib mr3 mb3"
+          class="link dim dark-green inline-block mr3 mb3"
           target="_blank"
           href="https://vimeo.com/phivk"
           title="vimeo"
