--- a/src/_layouts/frame.njk
+++ b/src/_layouts/frame.njk
@@ -11,14 +11,14 @@
     {% block head %}{% endblock %}
   </head>
   <body class="sans-serif dark-gray bg-washed-green" style="height: 100vh">
-    <header class="f7 absolute pa3 pa4-ns ph6-l">
-      <nav class="f6">
-        <a class="link dim dark-green dib mr3 mb3" href="/" title="home">
+    <header class="text-lg absolute p-4 pa4-ns ph6-l">
+      <nav class="text-xl">
+        <a class="link dim dark-green inline-block mr3 mb3" href="/" title="home">
           <i class="v-mid" data-feather="home"></i>
           <span class="v-mid">home</span>
         </a>
         <a
-          class="link dim dark-green dib mr3 mb3"
+          class="link dim dark-green inline-block mr3 mb3"
           href="/now"
           title="what I'm doing now"
         >
@@ -26,14 +26,14 @@
           <span class="v-mid">now</span>
         </a>
         <a
-          class="link dim dark-green dib mr3 mb3"
+          class="link dim dark-green inline-block mr3 mb3"
           href="/projects"
           title="projects"
         >
           <i class="v-mid" data-feather="zap"></i>
           <span class="v-mid">projects</span>
         </a>
-        <a class="link dim dark-green dib mr3 mb3" href="/about" title="about">
+        <a class="link dim dark-green inline-block mr3 mb3" href="/about" title="about">
           <i class="v-mid" data-feather="info"></i>
           <span class="v-mid">about</span>
         </a>
